# dotnet-skills

.github/: dependabot.yml
.github/agents/: agentic-workflows.agent.md
.github/aw/: actions-lock.json
.github/scripts/: pr-triage-act.sh
.github/workflows/: agentics-maintenance.yml  close-stale-prs.agent.lock.yml  close-stale-prs.agent.md  devops-health-check.lock.yml  devops-health-check.md  devops-health-groom.lock.yml  devops-health-groom.md  devops-health-investigate.lock.yml  devops-health-investigate.md  evaluation.yml  issue-investigate.lock.yml  issue-investigate.md  issue-triage.lock.yml  issue-triage.md  markdown-linter.lock.yml  markdown-linter.md  markdownlint.yml  pr-malicious-scan.agent.lock.yml  pr-malicious-scan.agent.md  pr-triage.yml  skill-check.yml  skill-validator.yml  validate-pat-pool.yml  vally-evaluation.yml
.github/workflows/shared/: pat_pool.README.md  pat_pool.md
docs/design/: pr-triage-workflows.md
eng/skill-validator/src/: README.md  SkillValidator.csproj  SkillValidatorJsonContext.cs
eng/skill-validator/src/Check/: SkillProfiler.cs
eng/skill-validator/src/Evaluate/: BaselineStore.cs  (+2 more)
eng/vally-adapter/: run-vally-evals.sh
tests/dotnet-test/assertion-quality/: eval.yaml
tests/dotnet-test/code-testing-agent/: eval.vally.yaml  eval.yaml
tests/dotnet-test/code-testing-agent/fixtures/python-flask-tasks/: .gitignore  README.md  pyproject.toml
tests/dotnet-test/code-testing-agent/fixtures/python-flask-tasks/src/tasks_api/: __init__.py  app.py  models.py  queries.py  repository.py  repository_sqlite.py  routes.py  service.py
(+15 files in other folders)
